--- a/index.html
+++ b/index.html
@@ -8,5 +8,34 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <ul>
+        <li>TicTacToe</li>
+      </ul>
+    </nav>
+    <div class="gameContainer">
+      <div class="container">
+        <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
+        <div class="box bt-0"><span class="boxtext"></span></div>
+        <div class="box bt-0 br-0"><span class="boxtext"></span></div>
+        <div class="box bl-0"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box br-0"><span class="boxtext"></span></div>
+        <div class="box bl-0 bb-0"><span class="boxtext"></span></div>
+        <div class="box bb-0"><span class="boxtext"></span></div>
+        <div class="box bb-0 br-0"><span class="boxtext"></span></div>
+      </div>
+      <div class="gameInfo">
+        <h1>Welcome to TicTacToe</h1>
+        <div>
+          <span class="info">Turn for X</span>
+          <button id="reset">Reset</button>
+        </div>
+        <div class="imgbox">
+          <img src="excited.gif" alt="" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
